--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -20,17 +20,21 @@
             android:textStyle="bold"
             android:layout_column="0"
             android:layout_row="0"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="55dp" />
 
         <AutoCompleteTextView
             android:id="@+id/Start"
-            android:layout_width="wrap_content"
+            android:layout_width="285dp"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_columnSpan="5"
             android:layout_row="0"
             android:layout_gravity="fill_horizontal"
-            android:inputType="textMultiLine|textAutoComplete|textPostalAddress"/>
+            android:inputType="textMultiLine|textAutoComplete|textPostalAddress"
+            android:layout_marginLeft="-55dp"
+            android:layout_rowSpan="2" />
 
         <CheckBox
             android:id="@+id/current1"
@@ -41,6 +45,7 @@
             android:text="@string/_Current"
             android:layout_column="1"
             android:layout_row="1"
+            android:visibility="gone"
             />
 
         <TextView
@@ -53,7 +58,8 @@
             android:layout_column="0"
             android:layout_row="2"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="75dp" />
 
         <AutoCompleteTextView
             android:id="@+id/End"
@@ -63,7 +69,9 @@
             android:layout_column="1"
             android:layout_columnSpan="5"
             android:layout_gravity="fill_horizontal"
-            android:inputType="textMultiLine|textAutoComplete|textPostalAddress"/>
+            android:inputType="textMultiLine|textAutoComplete|textPostalAddress"
+            android:layout_marginLeft="-55dp"
+            android:layout_rowSpan="2" />
 
         <CheckBox
             android:id="@+id/current2"
@@ -74,7 +82,8 @@
             android:checked="false"
             android:gravity="center"
             android:text="@string/_Current"
-            android:layout_row="3"/>
+            android:layout_row="3"
+            android:visibility="gone"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -106,7 +115,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_column="0"
-            android:layout_row="7"
+            android:layout_row="8"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"/>
 
@@ -118,7 +127,7 @@
             android:layout_column="0"
             android:textSize="13sp"
             android:onClick="setArrivalTime"
-            android:layout_row="6"
+            android:layout_row="7"
             android:layout_gravity="fill_horizontal"/>
 
         <Button
@@ -129,7 +138,7 @@
             android:layout_column="0"
             android:textSize="13sp"
             android:onClick="setStartTime"
-            android:layout_row="5"
+            android:layout_row="6"
             android:layout_gravity="fill_horizontal"/>
 
         <TextView
@@ -149,7 +158,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/displayStartTime"
             android:layout_column="1"
-            android:layout_row="5"
+            android:layout_row="6"
             android:layout_gravity="fill_horizontal"
             android:layout_columnSpan="5"
             android:layout_marginTop="10dp"/>
@@ -162,7 +171,7 @@
             android:layout_column="1"
             android:layout_marginTop="10dp"
             android:layout_columnSpan="5"
-            android:layout_row="6"
+            android:layout_row="7"
             android:layout_gravity="fill_horizontal"/>
 
         <Spinner
@@ -170,7 +179,7 @@
             android:layout_height="30dp"
             android:id="@+id/spinner"
             android:layout_column="3"
-            android:layout_row="7"
+            android:layout_row="8"
             android:layout_gravity="bottom"/>
 
         <GridLayout
@@ -196,7 +205,7 @@
                 android:layout_column="0"
                 android:layout_row="0"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="70dp"
                 android:layout_marginTop="30dp"/>
 
             <Button
@@ -208,9 +217,10 @@
                 android:text="@string/_Reset"
                 android:textColor="#FFFFFF"
                 android:layout_row="0"
-                android:layout_column="5"
-                android:layout_marginRight="40dp"
-                android:layout_marginTop="30dp"/>
+                android:layout_column="4"
+                android:layout_marginRight="0dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="80dp" />
         </GridLayout>
 
     </GridLayout>
