--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -26,7 +26,7 @@
 
         <AutoCompleteTextView
             android:id="@+id/Start"
-            android:layout_width="285dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_columnSpan="5"
@@ -34,7 +34,7 @@
             android:layout_gravity="fill_horizontal"
             android:inputType="textMultiLine|textAutoComplete|textPostalAddress"
             android:layout_marginLeft="-55dp"
-            android:layout_rowSpan="2" />
+            android:layout_rowSpan="4" />
 
         <CheckBox
             android:id="@+id/current1"
@@ -56,7 +56,7 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:layout_column="0"
-            android:layout_row="2"
+            android:layout_row="4"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:layout_marginRight="75dp" />
@@ -65,13 +65,13 @@
             android:id="@+id/End"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="2"
+            android:layout_row="4"
             android:layout_column="1"
             android:layout_columnSpan="5"
             android:layout_gravity="fill_horizontal"
             android:inputType="textMultiLine|textAutoComplete|textPostalAddress"
             android:layout_marginLeft="-55dp"
-            android:layout_rowSpan="2" />
+            android:layout_rowSpan="3" />
 
         <CheckBox
             android:id="@+id/current2"
@@ -93,9 +93,10 @@
             android:layout_column="0"
             android:onClick="setDate"
             android:textSize="13sp"
-            android:layout_row="4"
+            android:layout_row="7"
             android:layout_gravity="fill_horizontal"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,8 +105,9 @@
             android:id="@+id/displayDate"
             android:layout_column="1"
             android:layout_columnSpan="5"
-            android:layout_row="4"
-            android:layout_marginTop="10dp"/>
+            android:layout_row="7"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="fill_horizontal"/>
 
         <TextView
             android:id="@+id/txtSeatNo"
@@ -115,7 +117,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_column="0"
-            android:layout_row="8"
+            android:layout_row="10"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"/>
 
@@ -127,7 +129,7 @@
             android:layout_column="0"
             android:textSize="13sp"
             android:onClick="setArrivalTime"
-            android:layout_row="7"
+            android:layout_row="9"
             android:layout_gravity="fill_horizontal"/>
 
         <Button
@@ -138,18 +140,7 @@
             android:layout_column="0"
             android:textSize="13sp"
             android:onClick="setStartTime"
-            android:layout_row="6"
-            android:layout_gravity="fill_horizontal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textView12"
-            android:layout_column="1"
-            android:layout_row="4"
-            android:layout_columnSpan="5"
-            android:layout_marginTop="10dp"
+            android:layout_row="8"
             android:layout_gravity="fill_horizontal"/>
 
         <TextView
@@ -158,7 +149,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/displayStartTime"
             android:layout_column="1"
-            android:layout_row="6"
+            android:layout_row="8"
             android:layout_gravity="fill_horizontal"
             android:layout_columnSpan="5"
             android:layout_marginTop="10dp"/>
@@ -171,7 +162,7 @@
             android:layout_column="1"
             android:layout_marginTop="10dp"
             android:layout_columnSpan="5"
-            android:layout_row="7"
+            android:layout_row="9"
             android:layout_gravity="fill_horizontal"/>
 
         <Spinner
@@ -179,7 +170,7 @@
             android:layout_height="30dp"
             android:id="@+id/spinner"
             android:layout_column="3"
-            android:layout_row="8"
+            android:layout_row="10"
             android:layout_gravity="bottom"/>
 
         <GridLayout
@@ -188,7 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:layout_gravity="center|fill"
-            android:columnCount="6"
+            android:columnCount="7"
             android:rowCount="1"
             android:layout_columnSpan="6"
             android:layout_marginTop="30dp">
@@ -217,10 +208,9 @@
                 android:text="@string/_Reset"
                 android:textColor="#FFFFFF"
                 android:layout_row="0"
-                android:layout_column="4"
-                android:layout_marginRight="0dp"
+                android:layout_column="6"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="80dp" />
+                android:layout_gravity="center_horizontal"/>
         </GridLayout>
 
     </GridLayout>
