--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -2,7 +2,8 @@
 <ScrollView android:id="@+id/Lay01" xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.swen900014.orange.rideshareoz.OfferRide" >
+    tools:context="com.swen900014.orange.rideshareoz.OfferRide"
+            android:fillViewport="true">
 
     <GridLayout
         android:layout_width="fill_parent"
