--- a/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_offerride.xml
@@ -44,9 +44,9 @@
             android:gravity="center"
             android:text="@string/_Current"
             android:layout_column="1"
-            android:layout_row="1"
-            android:visibility="gone"
-            />
+            android:layout_row="2"/>
+            //android:visibility="gone"
+
 
         <TextView
             android:id="@+id/endPointText"
@@ -65,7 +65,7 @@
             android:id="@+id/End"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="2"
+            android:layout_row="3"
             android:layout_column="1"
             android:layout_columnSpan="5"
             android:layout_gravity="fill_horizontal"
@@ -82,8 +82,9 @@
             android:checked="false"
             android:gravity="center"
             android:text="@string/_Current"
-            android:layout_row="3"
-            android:visibility="gone"/>
+            android:layout_row="5" />
+            //android:visibility="gone"
+
 
         <Button
             android:layout_width="wrap_content"
@@ -93,7 +94,7 @@
             android:layout_column="0"
             android:onClick="setDate"
             android:textSize="13sp"
-            android:layout_row="4"
+            android:layout_row="6"
             android:layout_gravity="fill_horizontal"
             android:layout_marginTop="10dp"/>
 
@@ -104,7 +105,7 @@
             android:id="@+id/displayDate"
             android:layout_column="1"
             android:layout_columnSpan="5"
-            android:layout_row="4"
+            android:layout_row="6"
             android:layout_marginTop="10dp"/>
 
         <TextView
@@ -115,7 +116,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_column="0"
-            android:layout_row="8"
+            android:layout_row="9"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"/>
 
@@ -127,7 +128,7 @@
             android:layout_column="0"
             android:textSize="13sp"
             android:onClick="setArrivalTime"
-            android:layout_row="7"
+            android:layout_row="8"
             android:layout_gravity="fill_horizontal"/>
 
         <Button
@@ -138,7 +139,7 @@
             android:layout_column="0"
             android:textSize="13sp"
             android:onClick="setStartTime"
-            android:layout_row="6"
+            android:layout_row="7"
             android:layout_gravity="fill_horizontal"/>
 
         <TextView
@@ -158,7 +159,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/displayStartTime"
             android:layout_column="1"
-            android:layout_row="6"
+            android:layout_row="7"
             android:layout_gravity="fill_horizontal"
             android:layout_columnSpan="5"
             android:layout_marginTop="10dp"/>
@@ -171,7 +172,7 @@
             android:layout_column="1"
             android:layout_marginTop="10dp"
             android:layout_columnSpan="5"
-            android:layout_row="7"
+            android:layout_row="8"
             android:layout_gravity="fill_horizontal"/>
 
         <Spinner
@@ -179,7 +180,7 @@
             android:layout_height="30dp"
             android:id="@+id/spinner"
             android:layout_column="3"
-            android:layout_row="8"
+            android:layout_row="9"
             android:layout_gravity="bottom"/>
 
         <GridLayout
