--- a/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
@@ -220,7 +220,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rateString"
+            android:text="@string/rateRideString"
             android:id="@+id/rateRideButton"
             android:onClick="rate"
             android:layout_row="16"
