--- a/app/RideShareOZ/app/src/main/res/layout/activity_view_group.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_view_group.xml
@@ -17,7 +17,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="GroupName"
             android:id="@+id/groupNameText"
             android:layout_row="0"
             android:layout_column="0"
@@ -28,32 +27,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Info:"
+            android:text="@string/AboutTheGroup"
             android:id="@+id/groupDescriptionText"
             android:layout_row="1"
             android:layout_column="0"
-            android:layout_columnWeight="0.3"
             android:layout_gravity="top"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/groupInfoContentText"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_columnSpan="2"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_columnSpan="3"
             android:editable="false"
             android:layout_columnWeight="1"
             android:layout_gravity="bottom"
-            android:nestedScrollingEnabled="false"/>
+            android:nestedScrollingEnabled="false"
+            android:minHeight="150dp"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/join_leave_groupButton"
             android:onClick="onClick"
-            android:layout_row="2"
+            android:layout_row="3"
             android:layout_column="0"
             android:layout_columnSpan="3"
             android:layout_gravity="center_horizontal"/>
