--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -158,9 +158,10 @@
 
     <GridLayout android:layout_width="match_parent"
                 android:columnCount="3"
-                android:rowCount="1"
+                android:rowCount="2"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+        >
         <Button
             android:layout_width="80dp"
             android:layout_height="40dp"
@@ -170,7 +171,20 @@
             android:textSize="12sp"
             android:gravity="center_vertical|center_horizontal"
             android:layout_margin="10dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:visibility="gone"/>
+
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:text="@string/rateRideString"
+            android:id="@+id/ratePassButton"
+            android:onClick="ratePass"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"
+            android:visibility="gone"/>
 
         <Button
             android:layout_width="80dp"
@@ -181,6 +195,16 @@
             android:textSize="12sp"
             android:layout_row="0"
             android:layout_margin="10dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:visibility="gone"/>
+
+        <Spinner
+            android:layout_width="147dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinnerRatePass"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:spinnerMode="dropdown"
+            android:visibility="gone"/>
     </GridLayout>
 </TableLayout>
