--- a/server/RideShare-OZ-Server/views/admin.jade
+++ b/server/RideShare-OZ-Server/views/admin.jade
@@ -2,8 +2,8 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, maximum-scale=1, inital-scale=1')
-    link(rel='stylesheet', type='text/css', href='/stylesheet/mystyle.css')
-    title CustomerEvent
+    link(rel='stylesheet', type='text/css', href='stylesheets/mystyle.css')
+    title AdminLogin
   body
     form(method='post', action='login.php')
       table#login_table
@@ -16,3 +16,8 @@ html
         tr
           td
             input#login_button.my_button(type='submit', value='Log in')
+    // Template
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-animate.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-route.min.js')
+    script(src='ngcontroller.js')
