--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -179,7 +179,7 @@
             android:layout_height="40dp"
             android:text="@string/rateRideString"
             android:id="@+id/ratePassButton"
-            android:onClick="ratePass"
+            android:onClick="ratePassenger"
             android:layout_row="1"
             android:layout_column="0"
             android:layout_margin="10dp"
