--- a/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_pass_view_ride.xml
@@ -215,7 +215,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/joinButton"
-            android:onClick="onClick"
+            android:onClick="joinOrLeaveRide"
             android:layout_row="14"
             android:layout_column="0"
             android:layout_gravity="center_horizontal"
