--- a/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
+++ b/app/RideShareOZ/app/src/main/res/layout/activity_user_info.xml
@@ -138,19 +138,29 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/departureText"
-            android:id="@+id/departureText"
+            android:id="@+id/startAddressLabel"
             android:layout_column="0"
             android:layout_gravity="left|center"
             android:layout_marginBottom="10dp"
             />
 
+    </TableRow>
+
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/ShowDeparture"
-            android:layout_column="1"
+            android:id="@+id/startAddressText"
+            android:layout_column="0"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="10dp"
             android:inputType="textMultiLine"/>
 
